--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="refresh" content="0; url=home.html">
 
-  <link rel="icon" type="image/x-icon" href="assets/logo/website_logo.png">
+  <link rel="icon" type="image/x-icon" href="website_logo.png">
 </head>
 <body></body>
 </html>
