--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
 	<title>WareHouseX360</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="icon" type="image/x-icon" href="website_logo.png">
+	<link rel="icon" type="image/x-icon" href="assets/logo/website_logo.png">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
