Started implementing products page

--- a/pre-built.html
+++ b/pre-built.html
@@ -975,6 +975,7 @@
 					<a href="home.html" class="nav-link">Home</a>
 					<a href="pre-built.html" class="nav-link active">Shop Pre-Built Consoles</a>
 					<a href="send-in.html" class="nav-link">Send-In Service</a>
+                    <!--<a href="products.html" class="nav-link">Products</a>-->
 				</nav>
 
 				<div class="nav-right">
