--- a/products.html
+++ b/products.html
@@ -542,8 +542,8 @@
       <nav class="nav-center">
         <a href="home.html" class="nav-link">Home</a>
         <a href="pre-built.html" class="nav-link">Shop Pre-Built Consoles</a>
-        <a href="send-in.html" class="nav-link active">Send-In Service</a>
-        <!--<a href="products.html" class="nav-link">Products</a>-->
+        <a href="send-in.html" class="nav-link">Send-In Service</a>
+        <a href="products.html" class="nav-link active">Products</a>
       </nav>
 
       <div class="nav-right">
@@ -577,54 +577,13 @@
       <div class="send-hero-content">
         <h1 class="send-hero-title">Welcome to Our Online Store!</h1>
         <p class="send-hero-subtitle">
-          View all the options we have for send-in services! Currently shipping only to CANADA and the USA.
+          View all the products we currently have available! Currently shipping only to CANADA and the USA.
         </p>
       </div>
     </section>
 
     <!-- MAIN CONTENT -->
     <main>
-      <div class="container">
-        <section class="send-grid">
-
-          <!-- LEFT image -->
-          <div class="send-photo-frame">
-            <img src="assets/Home/Carousel_3.jpg" alt="">
-          </div>
-
-          <!-- CENTER service panel -->
-          <div>
-            <div class="service-panel">
-              <h2 class="service-title">Xbox 360 RGH 3/1.2 Service</h2>
-              <h3 class="service-subheading">Service Info</h3>
-
-              <ul class="service-list">
-                <li>Fresh application of Arctic MX-4</li>
-                <li><span class="price" data-price-usd="75"></span> for just an RGH install</li>
-                <li><span class="price" data-price-usd="95"></span> for RGH + Custom LEDs</li>
-                <li><span class="price" data-price-usd="110"></span> for RGH + LEDs + 500GB HDD upgrade</li>
-              </ul>
-
-              <p class="service-note">➜ Custom built consoles may take 2–5 business days to make.</p>
-            </div>
-          </div>
-
-          <!-- RIGHT shipping + board photo -->
-          <div>
-            <div class="shipping-panel">
-              <h3 class="shipping-title">Shipping</h3>
-              <p class="shipping-text">
-                FREE SHIPPING IN CANADA. USA SHIPPING $15 USD
-              </p>
-            </div>
-
-            <div class="board-photo-frame">
-              <img src="assets/Send-In/Soldering.jpeg" class="zoomable-board" alt="">
-            </div>
-          </div>
-
-        </section>
-      </div>
     </main>
 
     <!-- FOOTER -->
