--- a/contact-us.html
+++ b/contact-us.html
@@ -528,7 +528,7 @@
         <a href="home.html" class="nav-link">Home</a>
         <a href="pre-built.html" class="nav-link">Shop Pre-Built Consoles</a>
         <a href="send-in.html" class="nav-link">Send-In Service</a>
-        <!--<a href="products.html" class="nav-link">Products</a>-->
+        <a href="products.html" class="nav-link">Products</a>
       </nav>
 
       <div class="nav-right">
